@@ -4167,7 +4167,7 @@ document.
 
 \<unicode-math-hooks.4ht\><<<
 % unicode-math-hooks.4ht (|version), generated from |jobname.tex
-% Copyright 2021 TeX Users Group
+% Copyright 2021-2022 TeX Users Group
 |<TeX4ht license text|>
 \:dontusepackage{unicode-math}
 \RequirePackage{fontspec} % it is loaded by unicode-math
@@ -25620,9 +25620,8 @@ Do we need the following?
 
 \<texpower.4ht\><<<
 % texpower.4ht (|version), generated from |jobname.tex
-% Copyright 2009-2022 TeX Users Group
 % Copyright |CopyYear.2003. Eitan M. Gurari
-|<TeX4ht copyright|>
+|<TeX4ht copywrite|>
  |<undo texpower|>
 \Hinput{texpower}
 \endinput
