@@ -2,7 +2,7 @@
 % compile 3 times: latex tex4ht-moz
 %           or   xhlatex tex4ht-moz "html,3,sections+"
 %
-% Copyright 2009-2021 TeX Users Group
+% Copyright 2009-2022 TeX Users Group
 % Copyright 2000-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -26,7 +26,7 @@
 
 \<html5\><<<
 % html5.4ht (|version), generated from |jobname.tex
-% Copyright 2016-2021 TeX Users Group
+% Copyright 2016-2022 TeX Users Group
 |<TeX4ht copywrite|>
 >>>
 
