@@ -1,3 +1,9 @@
+2022-01-23  Karl Berry  <karl@freefriends.org>
+
+	* tex4ht-4ht.tex,
+	* tex4ht-html5.tex: 2022.
+	* Makefile (diff-*): report targets.
+
 2022-01-20  Karl Berry  <karl@freefriends.org>
 
 	* update-htfonts: new script to compare/update htfonts from
